# zzzfm

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  README  README.md  autogen.sh  configure.ac  zzzfm-common_1.0.7-1_all.deb  zzzfm-common_1.0.7-5_all.deb  zzzfm-common_1.0.7-5~contribs1_all.deb  zzzfm-common_1.0.7_all.deb  zzzfm-gtk3_1.0.7-1_amd64.deb  zzzfm-gtk3_1.0.7-5_amd64.deb  zzzfm-gtk3_1.0.7-5~contribs1_amd64.deb  zzzfm-gtk3_1.0.7-5~contribs1_i386.deb  zzzfm-gtk3_1.0.7_amd64.deb  zzzfm_1.0.7-1_amd64.buildinfo  zzzfm_1.0.7-1_amd64.deb  zzzfm_1.0.7-5_amd64.deb  zzzfm_1.0.7-5~contribs1_amd64.deb  zzzfm_1.0.7-5~contribs1_i386.deb  zzzfm_1.0.7_amd64.deb
data/: Makefile.am  zzzfm-find.desktop.in  zzzfm-folder-handler.desktop.in  zzzfm-manual-en.html  zzzfm.desktop.in
data/ui/: appchooserdlg.ui  file_properties.ui  find-files.ui  find-files2.ui  prefdlg.ui  prefdlg2.ui
deb-packages/: zzzfm-common_1.0.7-4_all.deb  zzzfm-common_1.0.7-6~contribs1_all.deb  zzzfm-common_1.0.7-6~contribs2_all.deb  zzzfm-gtk3_1.0.7-4_amd64.deb  zzzfm-gtk3_1.0.7-4_i386.deb  zzzfm-gtk3_1.0.7-6~contribs1_amd64.deb  zzzfm-gtk3_1.0.7-6~contribs1_i386.deb  zzzfm-gtk3_1.0.7-6~contribs2_amd64.deb  zzzfm-gtk3_1.0.7-6~contribs2_i386.deb  zzzfm_1.0.7-4_amd64.deb  zzzfm_1.0.7-4_i386.deb  zzzfm_1.0.7-6~contribs1_amd64.deb  zzzfm_1.0.7-6~contribs1_i386.deb  zzzfm_1.0.7-6~contribs2_amd64.deb  zzzfm_1.0.7-6~contribs2_i386.deb
debian/: changelog  clean_gtk3.sh  control  copyright  not-installed  rules  zzzfm-auth.1  zzzfm-common.dirs  zzzfm-common.doc-base  zzzfm-common.install  zzzfm-common.postinst  zzzfm-common.postrm  zzzfm-gtk3.install  zzzfm-gtk3.manpages  zzzfm-gtk3.postrm  zzzfm.1  zzzfm.install  zzzfm.postrm
etc/: Makefile.am  zzzfm.conf
po/: ChangeLog  LINGUAS  POTFILES.in  af.pAAAAA  af.po  ar.po  bg.po  bn_IN.po  ca.po  cs.po  da.po  de.po  el.po  en.po  es.po  et.po  eu.po  (+41 more)
(+320 files in other folders)
