## Process this file with automake to produce Makefile.in
#   howdy        revisit automated intltool utils

SUBDIRS = etc src data po

mimedir = $(datadir)/mime/packages
mime_DATA = src/mime-type/zzzfm-mime.xml

bin_SCRIPTS =

EXTRA_DIST = \
	autogen.sh \
	$(mime_DATA) \
	intltool-extract.in \
	intltool-merge.in \
	intltool-update.in
